tests/errors/breakOutsideLoop.milo
// @error: 'break' outside of loop

fn main(): i32 {
    break
    return 0
}

